[package]
name = "ssrkit"
version = "0.1.1"
edition = "2021"
authors = ["Jerome Leong <jeromeleong1998@gmail.com>"]
description = "SSR simplifier in Rust"
repository = "https://github.com/jeromeleong/SsrKit"
license = "MIT"
keywords = ["ssr", "web"]
categories = ["web-programming"]

[features]
default = []
island = []

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
regex = "1.10.5"
nanoid = "0.4.0"
indoc = "2.0.5"
lru = "0.12.4"

ssrkit-macros = { version = "0.1.0", path = "ssrkit-macros" }
